Tue Feb 16 05:09:49 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* Makefile (MIGSTUBS): Deleted variable; neither ioServer nor
	socketServer seem to be used.

Sun Jan 31 18:34:59 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* node.c (netfs_attempt_utimes): Implement new possibility that
	ATIME or MTIME might be null.

1997-08-27  Miles Bader  <miles@gnu.ai.mit.edu>

	* mux.c (netfs_attempt_lookup): Clear *NODE on errors.

1997-08-19  Miles Bader  <miles@gnu.ai.mit.edu>

	* hostmux.c (main): If the underlying node isn't a directory,
	propagate read permission to execute permission.

	* mux.c (netfs_attempt_lookup): Check for lookup permission.
	Re-arrange code to correctly handle errors.

1997-08-18  Miles Bader  <miles@gnu.ai.mit.edu>

	* stubs.c (netfs_attempt_mkfile): Correctly implement the interface.

1997-08-14  Miles Bader  <miles@gnu.ai.mit.edu>

	* hostmux.c (DEFAULT_HOST_PAT): New macro.
	(options, main): Use DEFAULT_HOST_PAT.
	(netfs_append_args): New function.

1997-08-11  Miles Bader  <miles@gnu.ai.mit.edu>

	* mux.c (netfs_attempt_lookup): Handle `.' and `..' lookups.
	(netfs_get_dirents): Add entries for `.' and `..'.

1997-08-07  Miles Bader  <miles@gnu.ai.mit.edu>

	* hostmux.c (main): Use ARGP_IN_ORDER to parse args.

1997-06-13  Miles Bader  <miles@gnu.ai.mit.edu>

	* leaf.c (create_host_node): Set the times of the new node.
	(str_append): Function removed.
	(netfs_get_translator): Use argz_replace instead of doing it ourselves.
	* mux.c (netfs_get_dirents): MAX_DATA_LEN == 0 means `no limit'.
	* hostmux.h (touch): Function removed; all uses replaced by the
	appropriate use of fshelp_touch instead.
	(TOUCH_ATIME, TOUCH_MTIME, TOUCH_CTIME): Macro removed.
	(hostmux_maptime): Renamed from HOSTMUX_MAPPED_TIME; all uses changed.
	* hostmux.c (options): --host-pattern isn't optional.