@@ -1,3 +1,7 @@
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* mux.c (netfs_get_dirents): Use mmap instead of vm_allocate.
+
 Tue Feb 16 05:09:49 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* Makefile (MIGSTUBS): Deleted variable; neither ioServer nor
